# hallucination-detection

./: .gitignore  CHANGES.md  MODULAR_FEATURES_README.md  OPTIMIZATION_UPDATE.md  README.md  dvc.yaml  eval_llama2.sh  params.yaml  pyproject.toml  reextract.sh  requirements.txt  run_all.sh  run_haloscope.sh  run_lookback.sh  run_lookback_lens.sh  run_tsv.sh  setup.py  train_and_evaluate.sh  train_eval_mistral.sh  validate_project.py
.ipynb_checkpoints/: README-checkpoint.md  dvc-checkpoint.yaml  eval_llama2-checkpoint.sh  llama-checkpoint.sh  llama2_dvc-checkpoint.sh  params-checkpoint.yaml  run_all-checkpoint.sh  run_lapeigvals-checkpoint.sh  run_pipeline-checkpoint.py  train_and_evaluate-checkpoint.sh  train_eval_all-checkpoint.sh
config/.ipynb_checkpoints/: config-checkpoint.yaml
config/dataset/: halueval.yaml  ragtruth.yaml  truthfulqa.yaml
config/experiment/: default.yaml  full_benchmark.yaml  quick_test.yaml
config/features/: default.yaml  haloscope.yaml  lapeigvals.yaml  with_full_attentions.yaml
config/generation/: default.yaml
config/llm_api/: local_ollama.yaml  openai.yaml  openai_gpt4.yaml  qwen.yaml  qwen_plus.yaml  qwen_turbo.yaml
config/method/: act.yaml  auto_ensemble.yaml  ensemble.yaml  entropy.yaml  haloscope.yaml  hsdmvaf.yaml  hypergraph.yaml  lapeigvals.yaml  lookback_lens.yaml  semantic_entropy_probes.yaml  token_entropy.yaml  tsv.yaml
config/model/: default.yaml  llama2_7b_chat.yaml  llama3_8b.yaml  mistral_7b.yaml  qwen2.5_7b.yaml  qwen2.5_7b_4bit.yaml
config/prompt/: qa.yaml  (+2 more)
docs/: ARCHITECTURE_REDESIGN.md  CONFIG_SYSTEM.md
scripts/: aggregate_results.py  cleanup.py  convert_to_lapeigvals.py  cross_task_evaluate.py  download_data.py  eval_perplexity.py  evaluate.py  extract_features.py  generate_activations.py  llm_judge.py  quick_eval.py  reexatract.py  reextract.py  run_experiment.py  run_llm_judge.py  split_dataset.py  train_method.py  train_probe.py
src/: __init__.py
utils/: __init__.py  async_saver.py  checkpoint.py  feature_manager.py
(+123 files in other folders)
